@@ -1,5 +1,7 @@
 package org.molgenis.vcf.inheritance.matcher.checker;
 
+import static htsjdk.variant.variantcontext.Allele.*;
+import static java.util.Collections.*;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.mock;
 import static org.molgenis.vcf.inheritance.matcher.model.MatchEnum.FALSE;
@@ -13,7 +15,7 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Set;
 import java.util.stream.Stream;
 
 import org.junit.jupiter.api.Test;
@@ -22,6 +24,8 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.molgenis.vcf.inheritance.matcher.vcf.VcfRecord;
+import org.molgenis.vcf.inheritance.matcher.model.GeneInfo;
 import org.molgenis.vcf.inheritance.matcher.model.MatchEnum;
 import org.molgenis.vcf.inheritance.matcher.util.VariantContextTestUtil;
 import org.molgenis.vcf.utils.sample.model.AffectedStatus;
@@ -35,23 +39,24 @@ class AdNonPenCheckerTest {
 
   @ParameterizedTest(name = "{index} {3}")
   @MethodSource("provideTestCases")
-  void check(VariantContext variantContext, Pedigree family, String expectedString,
-      String displayName) {
+  void check(VcfRecord vcfRecord, Pedigree family, String expectedString,
+             String displayName) {
     MatchEnum expected = mapExpectedString(expectedString);
-    assertEquals(expected, adNonPenetranceChecker.check(variantContext, family, FALSE));
+    assertEquals(expected, adNonPenetranceChecker.check(vcfRecord, family));
   }
 
   @Test
   void testCheckAd() {
     VariantContext variantContext = mock(VariantContext.class);
     Pedigree family = mock(Pedigree.class);
-    assertEquals(FALSE, adNonPenetranceChecker.check(variantContext, family, MatchEnum.TRUE));
+
+    assertEquals(FALSE, adNonPenetranceChecker.check(new VcfRecord(variantContext, Set.of(ALT_A,ALT_G,ALT_N), Set.of(new GeneInfo("GENE1", "SOURCE", emptySet()))), family));
   }
 
   private static Stream<Arguments> provideTestCases() throws IOException {
     File testFile = ResourceUtils.getFile("classpath:ADNonPenTests.tsv");
     List<String[]> lines = Files.lines(testFile.toPath())
-        .map(line -> line.split("\t")).collect(Collectors.toList());
+        .map(line -> line.split("\t")).toList();
 
     return lines.stream().skip(1).map(line -> {
       String testName = line[0];
@@ -82,8 +87,7 @@ class AdNonPenCheckerTest {
         genotypes.add(createGenotype("Brother", brotherGt));
       }
       return Arguments.of(VariantContextTestUtil
-          .createVariantContext(genotypes,
-              ""), family, expected, testName);
+          .createVariantContext(genotypes,""), family, expected, testName);
 
     });
   }
